--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0"
   }
