--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.8.0"
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "tailwindcss": "^3.2.4"
   }
 }
