--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.4",
     "react-social-icons": "^5.15.0",
+    "remark-gfm": "^3.0.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
