--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
     "react-social-icons": "^5.15.0",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "typescript": "4.9.3"
   },
